--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,10 @@
         <!-- Keep all your HTML in a div -->
         <div class="app">
             <h1>GWC Über Alles</h1>
-            <p>GWC is the greatest club!</p>
+            <p id="paragraph-1">GWC is the greatest club!</p>
+            <button id="change-button">Change Text</button>
+            <input type="text" name="da-textbox" id="textbox-1"></input>
+            <input type="checkbox" id="checkbox-1">Ze Fancy Textbox</input>
         </div>
         <!-- Load the GWC main functions -->
         <script type="text/javascript" src="js/gwc-main.js"></script>
