--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -28,21 +28,25 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
+        <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
         <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>Hello World</title>
+        <title>GWC App Project</title>
     </head>
     <body>
+        <!-- Keep all your HTML in a div -->
         <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
+            <h1>GWC Über Alles</h1>
+            <p id="paragraph-1">GWC is the greatest club!</p>
+            <button id="change-button">Change Text</button>
+            <input type="text" name="da-textbox" id="textbox-1"></input>
+            <input type="checkbox" id="checkbox-1">Ze Fancy Textbox</input>
         </div>
+        <!-- Load the GWC main functions -->
+        <script type="text/javascript" src="js/gwc-main.js"></script>
+        <!-- Do not edit the following lines -->
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
